# fusionkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  model-fusion-protocol-release.yml  pypi-release.yml
docs/: model-fusion-protocol-consumption.md  model-fusion-protocol-release.md
scripts/: validate_protocol_package.py
spec/model-fusion-contract/: README.md  buf.gen.yaml  buf.yaml  package.json  protocol-package.json
spec/model-fusion-contract/proto/velum/model_fusion/v1/: protocol.proto
spec/model-fusion-contract/python/: pyproject.toml
spec/model-fusion-contract/python/src/velum_model_fusion_protocol/: __init__.py
tests/: test_contract_bindings.py  test_protocol_package.py
