[project]
name = "fusionkit-workspace"
version = "0.1.0"
description = "Workspace for local MLX model fusion experiments."
requires-python = ">=3.11"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
fusionkit-core = { workspace = true }
fusionkit-server = { workspace = true }
fusionkit-evals = { workspace = true }
fusionkit-cli = { workspace = true }
fusionkit-mlx = { workspace = true }

[dependency-groups]
dev = [
  "coverage>=7.13.0",
  "httpx>=0.28.1",
  "httpx2>=2.4.0",
  "jsonschema>=4.26.0",
  "pyright>=1.1.407",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.14.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
